--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="stylesheets/styles.css">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Recipe Book</title>
 </head>
 <body>
-	<h1>Recipe Book</h1>
+	<div id="title">
+		<h1>Recipe Book</h1>
+	</div>
 	<div id="links">
 		<a href="recipes\pizza-chicken.html">Pizza Chicken</a>
 		<a href="recipes\butternut-soup.html">Butternut Squash Soup</a>
