added a stylesheet for the recipe pages, added css for all elements on every page.

--- a/recipes/asparagus.html
+++ b/recipes/asparagus.html
@@ -3,6 +3,7 @@
 
 <head>
 	<link rel="stylesheet" href="../stylesheets/styles.css">
+	<link rel="stylesheet" href="../stylesheets/page-styles.css">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +11,8 @@
 </head>
 
 <body>
-	<h1>Oven Roasted Asparagus</h1>
-	<div class="content">
+	<h1 class="large-margin">Oven Roasted Asparagus</h1>
+	<div class="content large-margin">
 		<img
 			src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6295187.jpg&w=596&h=596&c=sc&poi=face&q=85"
 			alt="Oven Roasted Asparagus">
@@ -20,12 +21,12 @@
 			<ul>
 				<li>1 bunch thin asparagus spears, trimmed</li>
 				<li>3 tablespoons olive oil</li>
-				<li>li>1 teaspoon salt</li>
-				<li>1 ½ tablespoons grated Parmesan cheese (Optional)</li>
+				<li>1 teaspoon salt</li>
+				<li>1 1/2 tablespoons grated Parmesan cheese (Optional)</li>
 				<li>1 clove garlic, minced (Optional)</li>
 				<li>4 cubes chicken bouillon</li>
 				<li>1 teaspoon sea salt</li>
-				<li>½ teaspoon ground black pepper</li>
+				<li>1/2 teaspoon ground black pepper</li>
 				<li>1 tablespoon lemon juice (Optional)</li>
 			</ul>
 		</div>
