--- a/recipes/butternut-soup.html
+++ b/recipes/butternut-soup.html
@@ -2,27 +2,28 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="../stylesheets/styles.css">
+	<link rel="stylesheet" href="../stylesheets/page-styles.css">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Butternut Squash Soup</title>
 </head>
 <body>
-	<h1>Butternut Squash Soup</h1>
-	<div class="content">
+	<h1 class="large-margin">Butternut Squash Soup</h1>
+	<div class="content large-margin">
 		<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7395069.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="Butternut Squash Soup">
 		<div class="section" id="Ingredients">
 			<header>Ingredients</header>
 			<ul>
 				<li>6 tablespoons chopped onion</li>
 				<li>4 tablespoons margarine</li>
-				<li>li>1 teaspoon salt</li>
+				<li>1 teaspoon salt</li>
 				<li>6 cups peeled and cubed butternut squash</li>
 				<li>3 cups water</li>
 				<li>4 cubes chicken bouillon</li>
-				<li>½ teaspoon dried marjoram</li>
-				<li>¼ teaspoon ground black pepper</li>
-				<li>⅛ teaspoon ground cayenne pepper</li>
+				<li>1/2 teaspoon dried marjoram</li>
+				<li>1/4 teaspoon ground black pepper</li>
+				<li>1/8 teaspoon ground cayenne pepper</li>
 				<li>2 (8 ounce) packages cream cheese</li>
 			</ul>
 		</div>
