--- a/recipes/pizza-chicken.html
+++ b/recipes/pizza-chicken.html
@@ -2,28 +2,29 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="../stylesheets/styles.css">
+	<link rel="stylesheet" href="../stylesheets/page-styles.css">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pizza Chicken</title>
 </head>
 <body>
-	<h1>Pizza Chicken</h1>
-	<div class="content">
+	<h1 class="large-margin">Pizza Chicken</h1>
+	<div class="content large-margin">
 		<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9176451.jpg&q=85" alt="Pizza Chicken with Pepperoni">
 		<div class="section" id="Ingredients">
 			<header>Ingredients</header>
 			<ul>
 				<li>1/2 Cup Italian-Seasoned Bread Crumbs</li>
-				<li>¼ cup grated Parmesan cheese</li>
-				<li>li>1 teaspoon salt</li>
+				<li>1/4 cup grated Parmesan cheese</li>
+				<li>1 teaspoon salt</li>
 				<li>1 teaspoon ground black pepper</li>
-				<li>½ cup all-purpose flour</li>
+				<li>1/2 cup all-purpose flour</li>
 				<li>1 egg</li>
 				<li>1 tablespoon lemon juice</li>
 				<li>2 skinless, boneless chicken breast halves</li>
-				<li>½ cup pizza sauce, divided</li>
-				<li>½ cup shredded mozzarella cheese, divided</li>
+				<li>1/2 cup pizza sauce, divided</li>
+				<li>1/2 cup shredded mozzarella cheese, divided</li>
 				<li>4 slices pepperoni, or to taste - divided</li>
 			</ul>
 		</div>
@@ -31,8 +32,7 @@
 			<header>Steps</header>
 			<ol>
 				<li>Preheat oven to 400 Degrees F.</li>
-				<li>Combine bread crumbs, Parmesan cheese, salt, and black pepper in a shallow bowl; place flour into a second bowl. Whisk
-				egg and lemon juice together in a third bowl.</li>
+				<li>Combine bread crumbs, Parmesan cheese, salt, and black pepper in a shallow bowl; place flour into a second bowl. Whisk egg and lemon juice together in a third bowl.</li>
 				<li>Dip each chicken breast in egg mixture and dredge in flour; dip again in egg mixture and dredge chicken in crumb mixture
 				until coated. Place coated chicken breasts into a baking dish.</li>
 				<li>Bake in the preheated oven until chicken is heated through and crumbs are golden, about 20 minutes.</li>
