--- a/recipes/pizza-chicken.html
+++ b/recipes/pizza-chicken.html
@@ -33,13 +33,10 @@
 			<ol>
 				<li>Preheat oven to 400 Degrees F.</li>
 				<li>Combine bread crumbs, Parmesan cheese, salt, and black pepper in a shallow bowl; place flour into a second bowl. Whisk egg and lemon juice together in a third bowl.</li>
-				<li>Dip each chicken breast in egg mixture and dredge in flour; dip again in egg mixture and dredge chicken in crumb mixture
-				until coated. Place coated chicken breasts into a baking dish.</li>
+				<li>Dip each chicken breast in egg mixture and dredge in flour; dip again in egg mixture and dredge chicken in crumb mixture until coated. Place coated chicken breasts into a baking dish.</li>
 				<li>Bake in the preheated oven until chicken is heated through and crumbs are golden, about 20 minutes.</li>
-				<li>Spoon 2 tablespoons pizza sauce onto each chicken breast, sprinkle each with half the mozzarella cheese, and top each
-				with half the pepperoni slices.</li>
-				<li>Bake until chicken is no longer pink inside and the juices run clear, about 10 more minutes. An instant-read meat
-				thermometer inserted into the thickest part of a breast should read at least 160 degrees F (70 degrees C).</li>
+				<li>Spoon 2 tablespoons pizza sauce onto each chicken breast, sprinkle each with half the mozzarella cheese, and top each with half the pepperoni slices.</li>
+				<li>Bake until chicken is no longer pink inside and the juices run clear, about 10 more minutes. An instant-read meat thermometer inserted into the thickest part of a breast should read at least 160 degrees F (70 degrees C).</li>
 			</ol>
 		</div>
 	</div>
